--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "test-scanner": "node discord_scanner.js --test"
   },
   "dependencies": {
+    "@solana/web3.js": "^1.87.6",
+    "bs58": "^5.0.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
-    "node-fetch": "^3.3.2",
     "express": "^4.18.2",
-    "@solana/web3.js": "^1.87.6",
-    "bs58": "^5.0.0"
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.5"
   },
   "engines": {
     "node": ">=18.0.0"
